--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -150,6 +150,24 @@ h3 {
   padding: 7px;
   margin-top: 40px !important;
 }
+
+label.important:after {
+  content: " *";
+}
+
+h1 {
+  border-bottom: solid 2px rgba(0, 0, 0, 0.06);
+  padding: 7px;
+  text-align: center;
+  margin-bottom: 40px !important;
+}
+
+h3 {
+  font-size: 14px;
+  border-bottom: solid 2px rgba(0, 0, 0, 0.06);
+  padding: 7px;
+  margin-top: 40px !important;
+}
 .carousel-inner {
   border-radius: 0 10px 10px 0;
 }
