:adhesive_bandage: Cambios en stands y diagrupo

--- a/app/views/project_details/_form_shared.html.erb
+++ b/app/views/project_details/_form_shared.html.erb
@@ -18,11 +18,13 @@
     <%= form.select :client_type, project_detail_client_type_options(), { prompt: 'Seleccionar tipo de cliente' }, :required => true, :class => "form-control" %>
   </div>
   
+  
   <div class="col-sm-4">
-    <%= form.label :academic_level, "Nivel Académico Máximo de los integrantes del equipo", :class => "form-label important" %>
+    <%#= form.label :academic_level, "Nivel Académico Máximo de los integrantes del equipo", :class => "form-label important" %>
     <%#= form.select :academic_level, academic_level_options(), { prompt: 'Seleccionar nivel' }, :required => true, :class => "form-control" %>
   </div>
 </div>
+
 
 
 <div class="form-group row text-left">
