--- a/app/views/project_details/_show_shared.html.erb
+++ b/app/views/project_details/_show_shared.html.erb
@@ -10,12 +10,8 @@
       <%= display_project_stand(@project) %>
     </div>
     <div>
-      Day:
-      2021-11-13
-    </div>
-    <div>
-      Group:
-      Monterrey
+      Dia-Grupo:
+      Monterrey - Lunes
     </div>
   </div>
   <div>
