--- a/app/views/stands/_form.html.erb
+++ b/app/views/stands/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :number %>
-    <%= form.number_field :number %>
+    <%= form.text_field :number %>
   </div>
 
   <div class="actions">
