--- a/app/views/daysgroups/index.html.erb
+++ b/app/views/daysgroups/index.html.erb
@@ -5,8 +5,7 @@
 <table>
   <thead>
     <tr>
-      <th>Group</th>
-      <th>Day</th>
+      <th>Day-Group</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,7 +14,6 @@
     <% @daysgroups.each do |daysgroup| %>
       <tr>
         <td><%= daysgroup.group %></td>
-        <td><%= daysgroup.day %></td>
         <td><%= link_to 'Show', daysgroup %></td>
         <td><%= link_to 'Edit', edit_daysgroup_path(daysgroup) %></td>
         <td><%= link_to 'Destroy', daysgroup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
