--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <script src = "http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js" type = "text/javascript"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
+
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-multiselect/0.9.13/js/bootstrap-multiselect.js"></script>
+
   <head>
     <title>ConexionTec</title>
     <%= csrf_meta_tags %>
@@ -13,6 +20,7 @@
   <body class="body-gradient">
     <%= render 'layouts/navbar.html.erb' if current_user%>
     <%= yield %>
+
   </body>
 
 </html>
